ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
/* ... */
.bg-cards .device-card.tile-table .tile-card .product,
.bg-cards .device-multi-card-selection.tile-table .tile-card .product,
.bg-cards .device-single-card-selection.tile-table .tile-card .product {
  height: 260px;
  position: relative;
  text-align: center;
  background: $white;
  overflow: hidden;
  border-radius: 10px 10px 0 0;
  border-top: 1px solid $white;
}

// green friday tag - online exclusive
.green-online-exclusive {
  border-radius: 14.5px;
  padding: 7px 10px;
  display: inline-block;
  &.bg-green {
    background-color: $main-green;
  }
  &.bg-orange {
    background-color: $dark-orange;
  }

  .content {
    display: flex;
    align-items: center;
  }

  .icon {
    width: 12px;
    height: 12px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 4px;
    svg,
    img {
      width: 12px;
      height: 12px;
    }
  }
  .text {
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 0.25px;
    color: $white;
    font-size: 12px;
    line-height: normal;
  }

  &.with-card {
    position: absolute;
    bottom: 0;
    left: 24px;
  }
}

*[lang="ar"] {
  *[dir="rtl"] {
    .green-online-exclusive {
      &.with-card {
        left: auto;
        right: 24px;
      }
    }
    .green-online-exclusive .icon {
      margin-right: 0;
      margin-left: 4px;
    }
  }
}

.productdetail.hide-product--grid {
  display: none;
}
.bg-cards {
  .row-tiles-table {
    #product {
      display: flex;
      flex-wrap: nowrap;
      @include respond-to-min($tablet) {
        flex-wrap: wrap;
      }
      .swiper-slide {
        height: auto;
        margin-bottom: 30px;
        cursor: pointer;
        padding-left: 12px;
        padding-right: 12px;

        .producttile {
          height: 100%;
          > div {
            height: 100%;
            .read-more-green-btn_bg,
            .read-more-red-btn_bg,
            .tile-table,
            .tile-card,
            .tile,
            .tile-card__front,
            .tiles-box {
              height: 100%;
            }
            .tiles-box-list {
              height: auto;
              flex: 2 2 auto;
              .featureList {
                height: auto;
              }
              .internet-config-container {
                .internet-text {
                  font-family: Lato,'GE SS Two',Roboto,Arial,sans-serif;
                  font-size: toRem(12);
                  font-weight: 700;
                  letter-spacing: toRem(3);
                  line-height: toRem(12);
                  text-transform: uppercase;
                  color: $steel-grey;
                  opacity: .8;
                  margin-bottom: toRem(8);

                  &.dark-gray {
                    color: $dark-gray;
                    opacity: 1;
                    letter-spacing: toRem(2);
                  }
                }
                .internet-config {
                  .internet-config-title {
                    color: #353738;
                    font-size: toRem(16);
                    line-height: 1;
                    font-weight: 700;
                    margin-top: toRem(4);
                    margin-bottom: 0;
                  }
                  .interner-config-progressbar {
                    margin-top: toRem(4);
                    .interner-config-image {
                      display: block;
                      max-width: 100%;
                      height: auto;
                      min-height: toRem(7);
                      border-radius: toRem(5);
                    }
                  }
                  .interner-config-desc {
                    color: $steel-grey;
                    font-size: toRem(12);
                    line-height: 1.42;
                    letter-spacing: toRem(.15);
                    margin-top: toRem(4);
                  }
                }
              }
            }
          }
        }
      }
      &:not(.swiper-wrapper) {
        overflow: auto;
        flex-direction: column;
        @include respond-to-min($tablet) {
          flex-direction: row;
          overflow: hidden;
        }
      }
    }
    .swiper-container {
      padding: 0 0 20px 0;
      #product.swiper-wrapper {
        flex-wrap: nowrap;
      }
    }
  }
}
.productdetail {
  padding: toRem(0);
  .tile {
    .tile-card__front {
      .view-channel-list {
        margin-bottom: 0.825rem;
        a {
          display: flex;
          align-items: center;
          @include font-family-lato;
          .channel-list-icon {
            background-image: url(../resources/images/icon-tv.svg);
            height: 24px;
            width: 24px;
            background-size: 24px 24px;
            display: inline-block;
          }
        }
      }
    }
  }
  .cmp-button {
    &--primary {
      transition: all 0.3s ease-in-out;
      @include font-family-lato;
      font-size: $font14;
      line-height: 1.25rem;
      position: relative;
      font-weight: 500;
      text-transform: none;
      width: 280px;
      padding: 6px;
    }
  }
}
/* ... */

