progressbar divider line spacing issue
progressbar divider line spacing issue

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -4273,6 +4273,14 @@
                     margin-top: toRem(4);
                   }
                 }
+                .internet-config-divider-line {
+                  background-image: url("../resources/images/divider.png");
+                  background-repeat: repeat;
+                  height: toRem(1);
+                  margin-bottom: toRem(12);
+                  margin-top: toRem(12);
+                  width: 100%;
+                }
               }
             }
           }
